# llch-spotify-mining

./: .gitignore  MANIFEST.in  README.md  setup.cfg
src/spotify_mining/: __init__.py  __main__.py  _version.py
src/spotify_mining/configurations/: __init__.py  _countries.py  _import_data.py
src/spotify_mining/configurations/templates/: default.ini
src/spotify_mining/mining/: __init__.py  s01_extract_charts.py  s04_extract_lyrics.py
src/spotify_mining/mining/s01_extract_charts/: __init__.py
src/spotify_mining/mining/s03_extract_tracks/: __init__.py  s03_extract_tracks_base.py  s03a_tracks.py  s03b_artists.py  s03c_features.py  s03d_audio_analysis.py
src/spotify_mining/mining/s04_extract_lyrics/: __init__.py
src/spotify_mining/services/: __init__.py  lyrics.py  musicbrainz.py  postgres.py
tests/: test_lyrics.py  test_s01_charts.py  test_s03_tracks.py
